# mirror-based-camera-pose-estimation

./: validate.py
data/: cam1R.txt  cam1T.txt  cam1corners.txt  cam2R_not_flipped.txt  cam2T_not_flipped.txt  cam2corners.txt  camera.txt
data/96/: cam1x1T.txt  cam1x2R.txt  cam1x2T.txt  cam2x1R.txt  cam2x2R.txt  cam2x2T.txt  old_cam1x2R.txt  old_cam1x2T.txt  old_cam2x2R.txt  old_cam2x2T.txt
data/96_0/: cam1T.txt  cam1T__.txt  cam1x2R.txt  cam1x2T.txt  cam2R.txt  cam2T.txt  cam2x2R.txt  cam2x2T.txt
data/test1/: cam1R.txt  cam1T.txt  cam2R.txt  cam2T.txt
opencv/: CMakeLists.txt  demo.cc  sub_solveP3P.h  tnm.h
